rajout page contact

--- a/projetMobileSound.html
+++ b/projetMobileSound.html
@@ -9,7 +9,12 @@
 
   <body>
 
-    <h1 id="jimmyPoirot"> - Jimmy POIROT - </h1>
+    <!-- <h1 id="jimmyPoirot"> - Jimmy POIROT - </h1> -->
+    <a href="portfolio3.html">
+      <div id="logo">
+        <img src="j2p1.JPG">
+      </div>
+    </a>
 
     <div id="container">
 <!--  ***********Container principal dans lequel j'ai containerText et containerVideo*********-->
